[package]
name = "pam_rssh"
version = "0.2.0"
authors = ["Yuxiang Zhang"]
edition = "2018"

[lib]
name = "pam_rssh"
crate-type = ["cdylib"]

[dependencies]
pam = { path = "./dep/pam-rs/pam" }
ssh-agent = { path = "./dep/ssh-agent.rs" }
multisock = "^1.0.0"
byteorder = "1.2.7"
base64 = "^0.13.0"
openssl-sys = "^0.9"
openssl = "^0.10"
log = { version = "^0.4", features = ["std", "serde"] }
syslog = "^5.0"
pwd = "1"
