[package]
name = "pam_rssh"
version = "1.1.0"
authors = ["Yuxiang Zhang"]
edition = "2018"

[lib]
name = "pam_rssh"
crate-type = ["cdylib"]

[dependencies]
pam-bindings = "0.1.1"
ssh-agent = { path = "./dep/ssh-agent.rs" }
multisock = "^1.0.0"
byteorder = "1.2.7"
base64 = "^0.13.0"
openssl-sys = "^0.9"
openssl = "^0.10"
log = { version = "^0.4", features = ["std", "serde"] }
subst = "^0.3.0"
syslog = "^6.0"
pwd = "1"
